feat: add status page

--- a/overrides/partials/copyright.html
+++ b/overrides/partials/copyright.html
@@ -3,3 +3,4 @@
   <div class="md-copyright__highlight">{{ config.copyright }}</div>
   {% endif %}
 </div>
+<script src="https://trivialsec.statuspage.io/embed/script.js"></script>
