--- a/overrides/partials/nav.html
+++ b/overrides/partials/nav.html
@@ -12,7 +12,7 @@ in features %} {% set class = class ~ " md-nav--integrated" %} {% endif %}
     >
       {% include "partials/logo.html" %}
     </a>
-    User Documentation
+    Knowledge Base
   </label>
   {% if config.repo_url %}
   <div class="md-nav__source">{% include "partials/source.html" %}</div>
